--- a/login.html
+++ b/login.html
@@ -77,6 +77,11 @@
   .alert.success{background:#d1fae5;color:#065f46;}
   .alert.error{background:#fee2e2;color:#991b1b;}
   .hidden{display:none;}
+  .txt{
+    display:block;
+    text-align:center;
+    color:#555;
+  }
 </style>
 </head>
 <body>
@@ -94,6 +99,8 @@
     <input type="email" id="loginEmail" placeholder="Correo" required>
     <input type="password" id="loginPass" placeholder="Contraseña" required>
     <button id="btnLogin">Entrar</button>
+    <button class="link-btn" id="anonimo">Modo anónimo</button>
+    <strong class="txt">ó</strong>
     <button class="link-btn" onclick="toggleForms()">¿No tienes cuenta? Crear una</button>
   </div>
 
@@ -175,6 +182,12 @@ window.toggleForms = function(){
   document.getElementById("registerForm").classList.toggle("hidden");
 }
 
+const anonimoBtn = document.getElementById('anonimo');
+window.onload = function() {
+  anonimoBtn.onclick = function() {
+    window.location.href = "index.html";
+  }
+};
 // LOGIN
 const loginMsg = document.getElementById('loginMsg');
 document.getElementById('btnLogin').addEventListener('click', async ()=>{
