--- a/index.html
+++ b/index.html
@@ -518,7 +518,7 @@ onAuthStateChanged(auth, async (user) => {
 const ads = [
   { img: "add/add.png", url: "https://hug-oh.com/" },
   { img: "add/add2.png", url: "https://hug-oh.com/" },
-  { img: "add/add3.png", url: "https://pizzapizza.com.sv/" }
+  { img: "add/add3.png", url: "https://hug-oh.com/" }
 ];
 
 // Función para obtener anuncio aleatorio
@@ -735,6 +735,7 @@ async function loadPosts() {
 </style>
 </body>
 </html>
+
 
 
 
