--- a/index.html
+++ b/index.html
@@ -518,7 +518,8 @@ onAuthStateChanged(auth, async (user) => {
 const ads = [
   { img: "add/add.png", url: "https://hug-oh.com/" },
   { img: "add/add2.png", url: "https://hug-oh.com/" },
-  { img: "add/add3.png", url: "https://hug-oh.com/" }
+  { img: "add/add3.png", url: "https://hug-oh.com/" },
+  { img: "add/add4.png", url: "https://www.youtube.com/@hablahistoria?sub_confirmation=1" }
 ];
 
 // Función para obtener anuncio aleatorio
@@ -735,6 +736,7 @@ async function loadPosts() {
 </style>
 </body>
 </html>
+
 
 
 
