--- a/index.html
+++ b/index.html
@@ -516,7 +516,7 @@ onAuthStateChanged(auth, async (user) => {
   });
 
 const ads = [
-  { img: "add/add.png", url: "https://hug-oh.com/" },
+  { img: "add/add.png", url: "https://hug-oh.com/add.html" },
   { img: "add/add2.png", url: "https://hug-oh.com/" },
   { img: "add/add31.png", url: "https://hug-oh.com/" },
   { img: "add/add4.png", url: "https://www.youtube.com/@hablahistoria?sub_confirmation=1" }
@@ -744,6 +744,7 @@ async function loadPosts() {
 </style>
 </body>
 </html>
+
 
 
 
